<resources>
    <string name="app_name">examen_2jemal</string>
    <string name="mostrar">Mostrar</string>
    <string name="ocultar">Ocultar</string>
    <string name="examen_calificado_02">Examen Calificado 02</string>
    <string name="guardar">Guardar</string>
    <string name="nombre_cliente">Nombre Cliente</string>
    <string name="numero_cliente">Numero Cliente</string>
    <string name="productos">Productos</string>
    <string name="ciudad">Ciudad</string>
    <string name="direcci_n">Dirección</string>
    <string name="pedido">Pedido</string>
</resources>