<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_cliente"
        android:background="@drawable/edittext_bg"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:layout_marginTop="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp" />

    <EditText
        android:id="@+id/edtNumeroCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numero_cliente"
        android:background="@drawable/edittext_bg"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:layout_margin="18dp"
        android:inputType="phone"
        android:digits="0123456789"/>

    <EditText
        android:id="@+id/edtProductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/productos"
        android:background="@drawable/edittext_bg"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:layout_margin="18dp"
         />

    <EditText
        android:id="@+id/edtCiudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ciudad"
        android:background="@drawable/edittext_bg"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:layout_margin="18dp"
         />

    <EditText
        android:id="@+id/edtDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/direcci_n"
        android:background="@drawable/edittext_bg"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:layout_margin="18dp" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/button_bg"
        android:textColor="@android:color/white"
        android:text="@string/guardar"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="16dp" />

</LinearLayout>
